--- a/packages/esm-covid-app/package.json
+++ b/packages/esm-covid-app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "openmrs-esm-ohri-covid-app",
   "version": "0.1.0",
-  "description": "Microfrontend for OpenMRS COVID Reference Implementation (OHRI)",
+  "description": "COVID Microfrontend for OpenMRS HIV Reference Implementation (OHRI)",
   "browser": "dist/openmrs-esm-ohri-covid-app.js",
   "main": "src/index.ts",
   "license": "MIT",
@@ -51,7 +51,6 @@
     "jest-coverage-badges": "^1.0.0",
     "lodash-es": "^4.17.15",
     "moment": "^2.29.1",
-    "openmrs-esm-ohri-commons-lib": "^0.1.1",
     "react-ace": "^9.4.4",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-markdown": "^7.1.0",
