--- a/packages/esm-covid-app/package.json
+++ b/packages/esm-covid-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ohri/openmrs-esm-ohri-covid-app",
-  "version": "0.6.45",
+  "version": "0.6.45-pre.1578",
   "description": "COVID Microfrontend for OpenMRS HIV Reference Implementation (OHRI)",
   "browser": "dist/openmrs-esm-ohri-covid-app.js",
   "main": "src/index.ts",
