--- a/packages/esm-covid-app/package.json
+++ b/packages/esm-covid-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ohri/openmrs-esm-ohri-covid-app",
-  "version": "0.6.54",
+  "version": "1.0.0",
   "description": "COVID Microfrontend for OpenMRS HIV Reference Implementation (OHRI)",
   "browser": "dist/openmrs-esm-ohri-covid-app.js",
   "main": "src/index.ts",
@@ -34,6 +34,7 @@
       "pre-commit": "pretty-quick --staged && concurrently 'npm:test' 'npm:typescript' 'npm:lint'"
     }
   },
+  "gitHead": "500745736410504bdeb3dd7e1ef61d4a4074400b",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/UCSF-IGHS/openmrs-esm-ohri.git"
@@ -51,23 +52,18 @@
     "jest-coverage-badges": "^1.0.0",
     "lodash-es": "^4.17.15",
     "moment": "^2.29.1",
-    "react-ace": "^9.4.4",
-    "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-markdown": "^7.1.0",
-    "react-scroll": "^1.8.2",
     "react-test-renderer": "^16.9.0",
-    "react-waypoint": "^10.1.0",
     "semver": "^7.3.5",
     "systemjs-webpack-interop": "^2.3.2",
     "yup": "^0.29.1"
   },
   "peerDependencies": {
-    "@openmrs/esm-framework": "3.x",
+    "@openmrs/esm-framework": "4.x",
     "carbon-components": "^10.19.0",
     "carbon-icons": "^7.0.7",
     "dayjs": "^1.8.16",
-    "react": "^16.9.0",
-    "react-i18next": "^11.3.4"
+    "react": "^18.2.0",
+    "react-i18next": "^11.7.0"
   },
   "devDependencies": {
     "browserslist-config-openmrs": "^1.0.0",
@@ -89,14 +85,14 @@
     "jest": "^24.9.0",
     "jest-cli": "^24.9.0",
     "node-sass": "^6.0.1",
-    "openmrs": "3.4.1-pre.189",
+    "openmrs": "4.x",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-i18next": "^11.3.4",
-    "react-router": "^5.0.1",
-    "react-router-dom": "^5.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-i18next": "^11.18.6",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
     "rxjs": "^6.6.2",
     "sass-loader": "^10.0.2",
     "style-loader": "^1.0.0",
@@ -106,6 +102,5 @@
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^4.2.1"
-  },
-  "gitHead": "500745736410504bdeb3dd7e1ef61d4a4074400b"
+  }
 }
