--- a/packages/esm-covid-app/package.json
+++ b/packages/esm-covid-app/package.json
@@ -44,15 +44,8 @@
   },
   "dependencies": {
     "@carbon/react": "^1.13.0",
-    "ace-builds": "^1.4.12",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
-    "formik": "^2.2.6",
-    "jest-coverage-badges": "^1.0.0",
     "lodash-es": "^4.17.15",
     "moment": "^2.29.1",
-    "react-test-renderer": "^16.9.0",
-    "semver": "^7.3.5",
     "systemjs-webpack-interop": "^2.3.7",
     "yup": "^0.29.1"
   },
@@ -65,34 +58,16 @@
   "devDependencies": {
     "browserslist-config-openmrs": "^1.0.0",
     "clean-webpack-plugin": "^3.0.0",
-    "concurrently": "^6.3.0",
-    "css-loader": "^3.2.0",
-    "dayjs": "^1.8.16",
     "eslint": "^7.10.0",
-    "eslint-config-prettier": "^6.13.0",
     "eslint-config-ts-react-important-stuff": "^3.0.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^6.3.3",
     "husky": "^3.0.4",
     "i18next": "^19.4.2",
     "identity-obj-proxy": "^3.0.0",
-    "istanbul-badges-readme": "^1.4.0",
-    "jest": "^24.9.0",
-    "jest-cli": "^24.9.0",
-    "openmrs": "4.x",
-    "prettier": "^1.18.2",
-    "pretty-quick": "^1.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.6",
     "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0",
-    "rxjs": "^6.6.2",
-    "sass": "^1.54.3",
-    "sass-loader": "^10.0.2",
-    "style-loader": "^1.0.0",
-    "typescript": "^4.0.3",
-    "unistore": "^3.5.2"
+    "react-router-dom": "^6.3.0"
   }
 }
