--- a/packages/esm-covid-app/package.json
+++ b/packages/esm-covid-app/package.json
@@ -13,12 +13,8 @@
     "build": "webpack --mode production",
     "analyze": "webpack --mode=production --env.analyze=true",
     "lint": "eslint src --ext tsx",
-    "prettier": "prettier --config prettier.config.js --write \"src/**/*.{ts,tsx}\"",
     "typescript": "tsc",
-    "prepublishOnly": "npm run build",
-    "test": "jest --config ./jest.config.js --passWithNoTests",
-    "coverage": "npm test -- --coverage",
-    "badges": "npm run coverage && jest-coverage-badges --output './badges' "
+    "prepublishOnly": "npm run build"
   },
   "browserslist": [
     "extends browserslist-config-openmrs"
@@ -29,12 +25,6 @@
   "publishConfig": {
     "access": "public"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged && concurrently 'npm:test' 'npm:typescript' 'npm:lint'"
-    }
-  },
-  "gitHead": "500745736410504bdeb3dd7e1ef61d4a4074400b",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/UCSF-IGHS/openmrs-esm-ohri.git"
@@ -51,23 +41,15 @@
   },
   "peerDependencies": {
     "@openmrs/esm-framework": "4.x",
-    "dayjs": "^1.8.16",
     "react": "^18.2.0",
-    "react-i18next": "^11.7.0"
+    "react-dom": "^18.2.0",
+    "react-i18next": "^11.7.0",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "browserslist-config-openmrs": "^1.0.0",
     "clean-webpack-plugin": "^3.0.0",
-    "eslint": "^7.10.0",
-    "eslint-config-ts-react-important-stuff": "^3.0.0",
-    "fork-ts-checker-webpack-plugin": "^6.3.3",
-    "husky": "^3.0.4",
-    "i18next": "^19.4.2",
-    "identity-obj-proxy": "^3.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-i18next": "^11.18.6",
-    "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0"
+    "i18next": "^19.4.2"
   }
 }
