--- a/packages/esm-covid-app/package.json
+++ b/packages/esm-covid-app/package.json
@@ -36,22 +36,17 @@
   "dependencies": {
     "@carbon/react": "^1.13.0",
     "lodash-es": "^4.17.15",
-    "moment": "^2.29.1",
-    "systemjs-webpack-interop": "^2.3.7",
-    "yup": "^0.29.1"
+    "moment": "^2.29.1"
   },
   "peerDependencies": {
     "@openmrs/esm-framework": "4.x",
+    "@openmrs/esm-patient-common-lib": "4.x",
+    "dayjs": "^1.8.16",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-i18next": "^11.7.0",
-    "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0"
+    "webpack": "^5.74.0"
   },
   "devDependencies": {
-    "browserslist-config-openmrs": "^1.0.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "i18next": "^19.4.2",
     "webpack": "^5.74.0"
   }
 }
